--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,28 @@
-:root{
-    --theme-templates:#1B1B1B;
-    --theme-bg1:#1F1F1F;
-    --theme-text:#B4B4B4;
-    --theme-hover:#969696;
-    --theme-white:#ECECEC;
+:root {
+    --theme-templates: #1B1B1B;
+    --theme-bg1: #1F1F1F;
+    --theme-text: #B4B4B4;
+    --theme-hover: #969696;
+    --theme-white: #ECECEC;
+    --theme-box-shadow: #343434;
 }
 
-body{
-    font-family: Poppins !important;
+html {
+    font-family: "Ubuntu", sans-serif;
+}
+
+body {
+
     background: var(--theme-bg1);
     color: var(--theme-white);
 }
 
+main {
+    width: calc(100% - 300px);
+    margin-left: auto
+}
 
-.navigation{
+.navigation {
     margin-left: 20px;
     transform: translateY(-50%);
     background-color: var(--theme-templates);
@@ -22,93 +31,182 @@ body{
     width: 290px;
     padding: 20px;
     transition: all 0.2s ease-in;
- 
 }
 
-nav .nav-link{
+nav .nav-link {
     color: var(--theme-hover);
     transition: all 0.3s ease;
 }
 
 nav .nav-link:hover {
-    color:var(--theme-white) !important;
-}
-nav .active{
-    color: var(--theme-white)!important;
+    color: var(--theme-white) !important;
 }
 
-.social-links  li i{
-    color: white;
+nav .active {
+    color: var(--theme-white) !important;
+}
+
+.social-links li i,
+.social-links-2 li i {
+    color: var(--theme-white);
     line-height: 40px;
     transition: all 0.5s ease;
 }
 
-.social-links  li:hover i{
+.social-links li:hover i,
+.social-links-2 li:hover i {
     color: var(--theme-bg1) !important;
 }
 
-.social-links  li{
+.social-links li {
     border: 1px solid #ffffff0c !important;
     background: var(--theme-bg1);
-    height: 40px !important; 
+    height: 40px !important;
     width: 40px !important;
     transition: all 0.5s ease;
 }
-.social-links  li:hover{
-   
+
+.social-links li:hover {
+
     background: var(--theme-white);
     font-weight: bolder;
     color: var(--theme-bg1);
-    
-   
+
+
 }
 
-.navbar-toggler-icon{
+.social-links-2 li i {
+    line-height: 50px;
+}
+
+.social-links-2 li {
+    border: 1px solid #ffffff0c !important;
+    background: var(--theme-templates);
+    height: 50px !important;
+    width: 50px !important;
+    transition: all 0.5s ease;
+}
+
+.social-links-2 li:hover {
     background: var(--theme-white);
-   width: 50px;
-   height: 50px;
-   border-radius: 50%;
-   line-height: 50px;
+    font-weight: bolder;
+    color: var(--theme-bg1);
+    box-shadow: rgb(251, 250, 250) 0px 5px 50px -14px;
 }
 
-.navbar-toggler:focus{
+.navbar-toggler-icon {
+    background: var(--theme-white);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    line-height: 50px;
+}
+
+.navbar-toggler:focus {
     border: none !important;
     box-shadow: none;
 }
 
 /* Custom CSS to handle the icon toggle */
 .navbar-toggler[aria-expanded="false"] .close-icon {
-  display: none;
+    display: none;
 }
 
 .navbar-toggler[aria-expanded="true"] .open-icon {
-  display: none;
+    display: none;
 }
 
 .navbar-toggler[aria-expanded="true"] .close-icon {
-  display: inline;
+    display: inline;
 }
 
-main {
-    width: calc(100% - 300px);
-    margin-left: auto;
-    font-family: 'Poppins';
-}
-
-.snap span{
+.snap span,
+.proffesion span {
     border-bottom: 2px solid var(--theme-white) !important;
 }
 
-.button .btn-light , .button .btn-outline-light{
+.snap {
+    font-size: 70px;
+}
+
+.button .btn-light,
+.button .btn-outline-light {
     border-radius: 50px !important;
     padding: 15px 20px !important;
     transition: all 0.3s ease;
-    border: 1px solid var(--theme-white) !important;
+    border: 2px solid var(--theme-white) !important;
 }
 
-
-.button .btn-light:hover{
+.button .btn-light:hover {
     transform: translateY(-2px);
-    box-shadow: rgba(235, 230, 230, 0.25) 5px 20px 30px -18px;
+    box-shadow: rgb(248, 244, 244) 0px 5px 40px -14px;
 }
 
+.button .btn-outline-light:hover {
+    transform: translateY(-2px);
+
+}
+
+.hero {
+    margin-top: 85px;
+    z-index: 999;
+}
+
+.hero-detail p {
+    line-height: 1.5;
+    color: var(--theme-text);
+}
+
+.hero-detail-img img {
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    object-fit: cover;
+    border-radius: 30px;
+}
+
+.hero-detail-img {
+    width: 400px;
+    height: 400px;
+    border-radius: 30px;
+    box-shadow: #343434 15px 15px;
+}
+
+.bg-elements .circle {
+    position: absolute;
+    animation-delay: 2s;
+    border-radius: 50%;
+    background: var(--theme-box-shadow);
+    z-index: 0;
+    animation-delay: 0s;
+}
+
+.bg-elements  .circle-2 {
+    margin-left: 650px;
+    margin-top: -200px;
+    width: 300px;
+    height: 300px;
+    animation: float 4s ease-in-out infinite;
+}
+
+.bg-elements .circle-1 {
+    width: 200px;
+    height: 200px;
+    margin-left: 80px;
+    margin-top: 35px;
+    animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-15px)
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
