--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --theme-text: #B4B4B4;
     --theme-hover: #969696;
     --theme-white: #ECECEC;
-    --theme-box-shadow: #343434;
+    --theme-box-shadow: #343434eb;
 }
 
 html {
@@ -23,15 +23,21 @@ main {
     margin-left: auto
 }
 
+@media(max-width:1199px){
+main{
+    width: 100%;
+}
+}
+
 .navigation {
     margin-left: 20px;
     transform: translateY(-50%);
     background-color: var(--theme-templates);
-    border: 1px solid #ffffff84;
+    border: 1px solid #ffffff2f;
+    padding: 15px;
     border-radius: 20px;
-    width: 290px;
-    padding: 20px;
     transition: all 0.2s ease-in;
+    z-index: 999;
 }
 
 nav .nav-link {
@@ -95,12 +101,14 @@ nav .active {
     box-shadow: rgb(251, 250, 250) 0px 5px 50px -14px;
 }
 
-.navbar-toggler-icon {
+
+.navbar-toggler-icon{
     background: var(--theme-white);
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    line-height: 50px;
+    line-height: 40px;
+    color: var(--theme-bg1);
 }
 
 .navbar-toggler:focus {
@@ -118,7 +126,7 @@ nav .active {
 }
 
 .navbar-toggler[aria-expanded="true"] .close-icon {
-    display: inline;
+    display: inline-block;
 }
 
 .snap span,
@@ -129,7 +137,6 @@ nav .active {
 .snap {
     font-size: 70px;
 }
-
 .button .btn-light,
 .button .btn-outline-light {
     border-radius: 50px !important;
@@ -173,41 +180,42 @@ nav .active {
     box-shadow: #343434 15px 15px;
 }
 
-.bg-elements .circle {
+.circle {
     position: absolute;
     animation-delay: 2s;
     border-radius: 50%;
-    background: var(--theme-box-shadow);
-    z-index: 0;
+    background:  var(--theme-box-shadow);
+    z-index: -1;
     animation-delay: 0s;
 }
 
-.bg-elements  .circle-2 {
-    margin-left: 650px;
-    margin-top: -300px;
+ .circle-2 {
+    bottom: 40%;
+    left: 10%;
+    z-index: -1;
     width: 300px;
     height: 300px;
-    animation: float 4s ease-in-out infinite;
+    animation: float 8s ease-in-out infinite;
 }
 
-.bg-elements .circle-1 {
+.circle-1 {
+   left: 10%;
+   bottom: 10%;
     width: 200px;
     height: 200px;
-    margin-left: 80px;
-    margin-top: 35px;
     animation: float 6s ease-in-out infinite;
 }
 
 @keyframes float {
     0% {
-        transform: translateY(0);
+        transform: translateY(4px);
     }
 
     50% {
-        transform: translateY(-15px)
+        transform: translateY(-20px)
     }
 
     100% {
-        transform: translateY(0px);
+        transform: translateY(4px);
     }
 }
