--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,3 +219,14 @@ nav .active {
         transform: translateY(4px);
     }
 }
+
+.profile-img img , .profile-img{
+    width: 150px;
+    height: 150px;
+    vertical-align: middle;
+    object-fit: cover;
+    border: 2px solid var(--theme-white);
+}
+.profile-img{
+    border:2px solid var(--theme-white);
+}
