--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,13 +220,36 @@ nav .active {
     }
 }
 
+.divider{
+    height: 100px;
+
+}
+
 .profile-img img , .profile-img{
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     vertical-align: middle;
     object-fit: cover;
-    border: 2px solid var(--theme-white);
 }
-.profile-img{
-    border:2px solid var(--theme-white);
+.profile-img img{
+    border:3px solid var(--theme-white) !important;
+}
+.sm-circle{
+    top: 60%;
+    left: 80%;
+    width: 30px;
+    height: 30px;
+    background: var(--theme-white);
+    border:3px solid var(--theme-bg1) !important;
+}
+.sm-circle .bi-check-circle-fill{
+     line-height: 25px;
+    justify-content: center;
+    color: var(--theme-bg1);
+}
+.proflie-card{
+    width: 100%;
+    height: 600px;
+    background: var(--theme-white) !important;
+    border: 2px solid var(--theme-text) !important;
 }
